chore(styles): fix overflow

--- a/guten/src/blocks/hero-section/style.scss
+++ b/guten/src/blocks/hero-section/style.scss
@@ -218,6 +218,7 @@
       transform: translateY(-130vh);
 
       @media (min-width: 768px) {
+        overflow: unset;
         opacity: 1;
         max-height: unset;
         transform: unset;
